--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@mui/system": "^5.14.17",
     "@tanstack/react-query": "^5.8.3",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "material-react-table": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
-    "dayjs": "^1.11.10"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
@@ -30,10 +30,11 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^2.5.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
-
   }
 }
