--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@mui/icons-material": "^5.14.16",
+    "@mui/lab": "^5.0.0-alpha.156",
     "@mui/material": "^5.14.17",
     "@mui/system": "^5.14.17",
+    "@mui/x-date-pickers": "^6.18.4",
     "@tanstack/react-query": "^5.8.3",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
