--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.14.16",
+    "@mui/icons-material": "^5.15.0",
     "@mui/lab": "^5.0.0-alpha.156",
     "@mui/material": "^5.14.17",
     "@mui/system": "^5.14.17",
     "@mui/x-date-pickers": "^6.18.4",
     "@tanstack/react-query": "^5.8.3",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "material-react-table": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
@@ -30,13 +31,13 @@
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^2.5.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "typescript": "^4.5.4",
+    "vite": "^5.0.8"
   }
 }
