--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.0",
     "@mui/lab": "^5.0.0-alpha.156",
-    "@mui/material": "^5.14.17",
+    "@mui/material": "^5.15.2",
     "@mui/system": "^5.14.17",
+    "@mui/x-data-grid": "^6.18.6",
     "@mui/x-date-pickers": "^6.18.4",
     "@tanstack/react-query": "^5.8.3",
     "axios": "^1.6.2",
