--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "DGEC-DIPLOMA-GENERATOR2.1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,20 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-react": "^2.0.8",
     "@mui/icons-material": "^5.15.0",
     "@mui/lab": "^5.0.0-alpha.156",
     "@mui/material": "^5.14.17",
     "@mui/system": "^5.14.17",
+    "@mui/x-data-grid": "^6.18.6",
     "@mui/x-date-pickers": "^6.18.4",
     "@tanstack/react-query": "^5.8.3",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "material-react-table": "^2.0.4",
+    "msal": "^1.4.18",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.0"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@emotion/react": "^11.11.1",
